Bug on small screens, notes' list gets a high z-index

--- a/app/styles/theme-default/styles.less
+++ b/app/styles/theme-default/styles.less
@@ -25,7 +25,7 @@ body {
 //
 @media (max-width: @screen-xs-max) {
     #sidebar {
-        z-index: @zindex-tooltip;
+        z-index: @zindex-navbar-fixed - 10;
     }
     .active-row {
         z-index: @zindex-navbar-fixed;
